  * '%P' in the caption string evaluates to true if the region is in copy mode.

  Window List:
  * Nested views when there are window groups (with 'windowlist -g').
  * Press 'm' to toggle the most-recent view.
  * Press 'g' to toggle nestedness.
  * Press 'a' to view all windows in the list.
  * Press '/' to search in the list.
  * Press ',' and '.' to re-order windows in the list.

  Display List:
  * Press 'd' to detach a display, 'D' to power-detach.

  Others:
  * Start using 'ChangeLog' for logging changes again.
  * Terminfo update for 256-color support.
  * Multiple input history (partially from Romain Francoise).
  * vi-like fFtT;, searching in copy mode.
  * In copy mode, search in reverse direction when 'N' is pressed.
  * Tab-completion for command input.
  * Some more readline-like bindings in input mode (e.g. ^W, ^D, ^P, ^N etc.)
  * Fix displaying unicode characters in the caption/hardstatus on UTF8 locale.
  * A revamped displays list (for 'displays' command)
  * Increased default maximum number of windows from 40 to 100.
  * Increased number color/attribute changes in caption/hardstatus string from 16 to 256.
  * Some commands can be remotely queried using the -Q command-line flag.

  In-Progress:
  * Scripting support (thanks to Google Summer of Code 2009 project by Rui Guo)

  Developers:
  * Juergen Weigert <jw@suse.de>
  * Michael Schroeder <mls@suse.de>
  * Micah Cowan <micah@cowan.name>
  * Sadrul Habib Chowdhury <sadrul@users.sourceforge.net>

  Contributors:
  * Clavelito <maromomo@hotmail.com>
  * Dick <dick@mrns.nl>
  * Gabriel <g2p.code@gmail.com>
  * Benjamin Andresen <bandresen@gmail.com>
  * Maarten Billemont <lhunath@gmail.com>
  * Curtis Brown <mrbrown8@juno.com>
  * Cyril Brulebois <kibi@debian.org>
  * Trent W Buck <trentbuck@gmail.com>
  * Stephane Chazelas <stephane_chazelas@yahoo.fr>
  * Kees Cook <kees@ubuntu.com>
  * Thomas Dickey <tom@invisible-island.net>
  * Christian Ebert <blacktrash@gmx.net>