@@ -58,6 +58,7 @@ Version 4.1.0 (??/??/20??):
   * Press 'a' to view all windows in the list.
   * Press '/' to search in the list.
   * Press ',' and '.' to re-order windows in the list.
+  * Press 'K' to kill a window (requires confirmation).
 
   Display List:
   * Press 'd' to detach a display, 'D' to power-detach.
